truly fix overflow issue

--- a/app/assets/stylesheets/flexslider.scss
+++ b/app/assets/stylesheets/flexslider.scss
@@ -270,7 +270,7 @@ html[xmlns] .flexslider .slides {
 
 
 .flexslider {
-  overflow: auto;
+  overflow: hidden;
 }
 .flexslider .slides li {
     position:relative;
